--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Load Leaflet from CDN -->
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-		
+		<script data-main='js/main' src='js/require.js'></script>
 		<style>
 			body { padding:0; margin:0; }
 			#map { position: absolute; top:0; right:0; bottom:0; left:0; }
@@ -17,6 +17,6 @@
 	<body>
 		<div id="map"></div>
 		
-		<script src='main.js'></script>
+		<!--<script src='main.js'></script>-->
 	</body>
 </html>
