Added Coordinates Control

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		
 		<!-- Load Leaflet from CDN -->
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+		<!--<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>-->
+		<link rel="stylesheet" href="style/coordinates.css" />
 		<script data-main='js/main' src='js/require.js'></script>
 		<style>
 			body { padding:0; margin:0; }
